test/flow/_snapshots_/detect-errors.txt
Error: sample-with-errors-named-imports.js:16
 16: result.bogus == null;
            ^^^^^ property `bogus`. Property not found in
 16: result.bogus == null;
     ^^^^^^ object type

Error: sample-with-errors.js:11
 11: validator.bogus();
               ^^^^^ property `bogus`. Property not found in
 11: validator.bogus();
     ^^^^^^^^^ JSONDValidator

Error: sample-with-errors.js:24
 24: result.bogus == null;
            ^^^^^ property `bogus`. Property not found in
 24: result.bogus == null;
     ^^^^^^ object type

Error: sample-with-errors.js:30
 30: 	error.nope;
     	      ^^^^ property `nope`. Property not found in
 30: 	error.nope;
     	^^^^^ object type


Found 4 errors
